Add Gson, start parsing Hole 19 export WIP